--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -12,6 +12,8 @@
     <a href="/staged" class="govuk-back-link">Back</a>
 }
 
+@* todo: create an eval to help test the effectiveness of the prompt *@
+@* todo: split the work for a service into separate conversations/prompts? *@
 @* todo: play with settings like temperature - occasionally e.g. pii is missed *@
 @* todo: move content into content violation card: that way can check more fields & don't have to worry about overlapping highlights*@
 @* todo: put the reason in the card heading *@
