--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_PerformanceDataCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_PerformanceDataCard.cshtml
@@ -2,7 +2,7 @@
 
 <div data-testid="card-performance" class="card">
     <h3 class="govuk-heading-s">
-        <a asp-page="/Performance-Data/Find">View Data</a>
+        <a asp-page="/Performance-Data/Connect">View Data</a>
     </h3>
     <p class="govuk-body-s">
         @if (Model)
