--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -151,6 +151,8 @@
                 </strong>
             </summary-row>
         </summary-card>
+        
+        <a href="/staged/service-details?serviceId=@(Model.Service.Id)&reanalyse=true" class="govuk-button">Reanalyse</a>
     </div>
 </div>
 
