--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
@@ -16,7 +16,14 @@
         <p class="govuk-body-m">
             @if (Model.OrgName != null)
             {
-                <text>Data about voluntary and community sector (VCS) services in the @Model.OrgName local authority area.</text>
+                if (Model.IsVcs)
+                {
+                    <text>Data about services and connection requests for @Model.OrgName.</text>
+                }
+                else
+                {
+                    <text>Data about voluntary and community sector (VCS) services in the @Model.OrgName local authority area.</text>
+                }
             }
             else
             {
@@ -27,9 +34,12 @@
 </div>
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-quarter">
-        @await Html.PartialAsync("_Navigation", Model.NavigationDataModel)
-    </div>
+    @if (!Model.IsVcs)
+    {
+        <div class="govuk-grid-column-one-quarter">
+            @await Html.PartialAsync("_Navigation", Model.NavigationDataModel)
+        </div>
+    }
     <div class="govuk-grid-column-three-quarters">
         <h2 data-testid="h2-overall" class="govuk-heading-s govuk-!-margin-bottom-3">Overall totals for @(Model.OrgName ?? "Connect")</h2>
         <table data-testid="table-overall" class="govuk-table govuk-!-font-size-16">
