--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
@@ -79,13 +79,13 @@
             </tbody>
         </table>
 
-        <h2 data-testid="h2-weekly" class="govuk-heading-s govuk-!-margin-top-9 govuk-!-margin-bottom-3">Searches in the last 4 weeks</h2>
+        <h2 data-testid="h2-weekly" class="govuk-heading-s govuk-!-margin-top-9 govuk-!-margin-bottom-3">Searches and connection requests in the last 4 weeks</h2>
         <table data-testid="table-breakdown" class="govuk-table govuk-!-font-size-16">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
                 <th scope="col" data-testid="th-week-weekly" class="govuk-table__header govuk-!-width-one-half">Week</th>
                 <th scope="col" data-testid="th-number-of-searches-weekly" class="govuk-table__header">Number of searches</th>
-                <th scope="col" data-testid="th-number-of-requests-made-weekly" class="govuk-table__header">Requests made</th>
+                <th scope="col" data-testid="th-number-of-requests-made-weekly" class="govuk-table__header">Requests @(Model.IsVcs ? "Requests received" : "Requests sent")</th>
             </tr>
             </thead>
             <tbody class="govuk-table__body">
