--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
@@ -85,7 +85,7 @@
             <tr class="govuk-table__row">
                 <th scope="col" data-testid="th-week-weekly" class="govuk-table__header govuk-!-width-one-half">Week</th>
                 <th scope="col" data-testid="th-number-of-searches-weekly" class="govuk-table__header">Number of searches</th>
-                <th scope="col" data-testid="th-number-of-requests-made-weekly" class="govuk-table__header">Requests @(Model.IsVcs ? "Requests received" : "Requests sent")</th>
+                <th scope="col" data-testid="th-number-of-requests-made-weekly" class="govuk-table__header">Connection @(Model.IsVcs ? "requests received" : "requests sent")</th>
             </tr>
             </thead>
             <tbody class="govuk-table__body">
