Fix sub heading text for connect KPI

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
@@ -27,7 +27,7 @@
             }
             else
             {
-                <text>Data about local authority services for Connect families to support (Connect).</text>
+                <text>Data about voluntary and community sector (VCS) services for Connect families to support (Connect).</text>
             }
         </p>
     </div>
